(fix) imagenes de trabajo de accesorios (pendiente de conectar con bd)

--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -173,8 +173,8 @@ echo $this->doctype(); ?>
             </div>
             <div class="row row-bottom-padded-sm">
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_1.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_1.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_1.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_1.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 1</h2>
                             <span>Branding</span>
@@ -182,8 +182,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_2.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_2.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_2.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_2.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 2</h2>
                             <span>Web</span>
@@ -194,8 +194,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_3.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_3.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_3.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_3.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 3</h2>
                             <span>Web</span>
@@ -203,8 +203,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_4.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_4.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_4.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_4.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 4</h2>
                             <span>UI/UX</span>
@@ -215,8 +215,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_5.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_5.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_5.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_5.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 1</h2>
                             <span>Photography</span>
@@ -224,8 +224,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_6.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_6.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_6.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_6.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 2</h2>
                             <span>Illustration</span>
@@ -236,8 +236,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_7.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_7.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_7.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_7.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 3</h2>
                             <span>Web</span>
@@ -245,8 +245,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_8.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_8.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_8.jpg');?>" class="abstpl-project-item image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_8.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 4</h2>
                             <span>Sketch</span>
@@ -256,15 +256,6 @@ echo $this->doctype(); ?>
 
                 <div class="clearfix visible-sm-block"></div>
 
-                <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_1.jpg" class="abstpl-project-item image-popup to-animate">
-                        <img src="images/work_1.jpg" alt="Image" class="img-responsive">
-                        <div class="abstpl-text">
-                            <h2>Project 2</h2>
-                            <span>Illustration</span>
-                        </div>
-                    </a>
-                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -414,8 +405,8 @@ echo $this->doctype(); ?>
             </div>
             <div class="row row-bottom-padded-sm">
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_1.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_1.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_1.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_1.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 1</h2>
                             <span>Branding</span>
@@ -423,8 +414,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_2.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_2.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_2.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_2.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 2</h2>
                             <span>Web</span>
@@ -435,8 +426,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_3.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_3.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_3.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_3.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 3</h2>
                             <span>Web</span>
@@ -444,8 +435,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_4.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_4.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_4.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_4.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 4</h2>
                             <span>UI/UX</span>
@@ -456,8 +447,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_5.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_5.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_5.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_5.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 1</h2>
                             <span>Photography</span>
@@ -465,8 +456,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_6.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_6.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_6.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_6.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 2</h2>
                             <span>Illustration</span>
@@ -477,8 +468,8 @@ echo $this->doctype(); ?>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_7.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_7.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_7.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_7.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 3</h2>
                             <span>Web</span>
@@ -486,8 +477,8 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_8.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_8.jpg" alt="Image" class="img-responsive">
+                    <a href="<?= $this->basePath($basePath . '/images/work_8.jpg');?>" class="abstpl-project-item with-border image-popup to-animate">
+                        <img src="<?= $this->basePath($basePath . '/images/work_8.jpg');?>" alt="Image" class="img-responsive">
                         <div class="abstpl-text">
                             <h2>Project 4</h2>
                             <span>Sketch</span>
@@ -495,17 +486,6 @@ echo $this->doctype(); ?>
                     </a>
                 </div>
 
-                <div class="clearfix visible-sm-block"></div>
-
-                <div class="col-md-4 col-sm-6 col-xxs-12">
-                    <a href="images/work_1.jpg" class="abstpl-project-item with-border image-popup to-animate">
-                        <img src="images/work_1.jpg" alt="Image" class="img-responsive">
-                        <div class="abstpl-text">
-                            <h2>Project 2</h2>
-                            <span>Illustration</span>
-                        </div>
-                    </a>
-                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -534,17 +514,17 @@ echo $this->doctype(); ?>
             <div class="row">
                 <div class="col-md-4">
                     <div class="abstpl-person text-center to-animate">
-                        <figure><img src="images/person2.jpg" alt="Image"></figure>
+                        <figure><img src="<?=$this->basePath($basePath . '/images/person2.jpg')?>" alt="Image"></figure>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="abstpl-person text-center to-animate">
-                        <figure><img src="images/person1.jpg" alt="Image"></figure>
+                        <figure><img src="<?=$this->basePath($basePath . '/images/person1.jpg')?>" alt="Image"></figure>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="abstpl-person text-center to-animate">
-                        <figure><img src="images/person3.jpg" alt="Image"></figure>
+                        <figure><img src="<?=$this->basePath($basePath . '/images/person3.jpg')?>" alt="Image"></figure>
                     </div>
                 </div>
             </div>
@@ -629,20 +609,18 @@ echo $this->doctype(); ?>
         </div>
     </footer>
 
-
-
-        <?php if ($this->showCookieAlert) :?>
-            <div id="cookie_alert" class="hide container-fluid">
-                <div class="col-md-12">
-                    <?=$this->translate('Cookie message','frontend');?>
-                    <a href="<?=$this->url('locale/legal/page',array('locale' => $this->lang, 'page' => 'cookies'));?>"><?=$this->translate('More info','frontend');?></a>
-                    &nbsp;&nbsp;&nbsp;
-                    <a href="#" id="close_cookie_alert"><?=$this->translate('Cookies agree','frontend');?></a>
-                </div>
+    <?php if ($this->showCookieAlert) :?>
+        <div id="cookie_alert" class="hide container-fluid">
+            <div class="col-md-12">
+                <?=$this->translate('Cookie message','frontend');?>
+                <a href="<?=$this->url('locale/legal/page',array('locale' => $this->lang, 'page' => 'cookies'));?>"><?=$this->translate('More info','frontend');?></a>
+                &nbsp;&nbsp;&nbsp;
+                <a href="#" id="close_cookie_alert"><?=$this->translate('Cookies agree','frontend');?></a>
             </div>
-        <?php endif; ?>
+        </div>
+    <?php endif; ?>
 
-        <input type="hidden" id="simple-routing-manager" name="<?=$this->srmController;?>" value="<?=$this->controllerAction;?>" />
+    <input type="hidden" id="simple-routing-manager" name="<?=$this->srmController;?>" value="<?=$this->controllerAction;?>" />
 
     <!-- Scripts -->
         <?php echo $this->headScript()
