(feat) Más textos de cabecera

--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -231,10 +231,7 @@ $mediaPath = $this->basePath('media');
                 <h2 class="to-animate">ACCESORIOS</h2>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 subtext to-animate">
-                        <h3>Nuestra actividad abarca todos los campos relacionados con el control técnico y de calidad
-                            en las actividades que giran en torno al montaje mecánico.
-                            También damos apoyo eléctrico y de ingeniería.
-                        </h3>
+                        <h3><?= $this->accessoriesIntro;?></h3>
                     </div>
                 </div>
             </div>
@@ -366,10 +363,7 @@ $mediaPath = $this->basePath('media');
                 <h2 class="to-animate">Contacto</h2>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 subtext to-animate">
-                        <h3>
-                            ¿Alguna duda o sugerencia? No dudes en contactar con nosotros por cualquiera de los
-                            canales disponibles.
-                        </h3>
+                        <h3><?= $this->contactIntro;?></h3>
                     </div>
                 </div>
             </div>
