(feat) mas ajustes

--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -7,8 +7,7 @@ $mediaPath = $this->basePath('media');
 
 ?>
 
-<section id="abstpl-home" data-section="home" style="background-image: url(<?=$assetPath . '/images/full_image_2.jpg';?>);"
-         data-stellar-background-ratio="0.5">
+<section id="abstpl-home" data-section="home" style="background-image: url(<?=$assetPath . '/images/full_image_2.jpg';?>);">
     <div class="gradient"></div>
     <div class="container">
         <div class="text-wrap">
@@ -329,8 +328,7 @@ $mediaPath = $this->basePath('media');
     </div>
 </section>
 
-<section id="abstpl-counters" data-section="clients" style="background-image: url(<?=$assetPath . '/images/full_image_1.jpg';?>);"
-         data-stellar-background-ratio="0.5">
+<section id="abstpl-counters" data-section="clients" style="background-image: url(<?=$assetPath . '/images/full_image_1.jpg';?>);">
     <div class="abstpl-overlay"></div>
     <div class="container">
         <div class="row">
