--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -73,7 +73,7 @@ echo $this->doctype(); ?>
     <?php echo $this->content ?>
 
     <footer id="footer" role="contentinfo">
-        <a href="#" class="gotop js-gotop"><i class="icon-arrow-up2"></i></a>
+        <a href="#" class="gotop" id="js-gotop"><i class="icon-arrow-up2"></i></a>
         <div class="container">
             <div class="">
                 <div class="col-md-12 text-center">
@@ -113,9 +113,8 @@ echo $this->doctype(); ?>
             ->appendFile($assetPath. '/js/jquery.easing.1.3.js')
             ->appendFile($assetPath. '/js/bootstrap.min.js')
             ->appendFile($assetPath. '/js/jquery.waypoints.min.js')
-            ->appendFile($assetPath. '/js/jquery.stellar.min.js')
-            ->appendFile($assetPath. '/js/jquery.magnific-popup.min.js')
-            ->appendFile($assetPath. '/js/magnific-popup-options.js')
+            //->appendFile($assetPath. '/js/jquery.magnific-popup.min.js')
+            //->appendFile($assetPath. '/js/magnific-popup-options.js')
             ->appendFile($assetPath. '/js/main.js')
         ; ?>
         <?php echo $this->inlineScript() ?>
