(feat) reajustando dependencias de javascript. Modificando gulpfile para añadir las nuevas dependencias Eliminación de librerías que no se usan en el nuevo diseño

--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -2,12 +2,12 @@
 $menuHelper = $this->applicationMenuHelper();
 $jobHelper = $this->jobHelper();
 
-$assetPath = $this->basePath('bravo-silva');
+$assetPath = $this->basePath('absconsultor');
 $mediaPath = $this->basePath('media');
 
 ?>
 
-<section id="abstpl-home" data-section="home" style="background-image: url(<?=$assetPath . '/images/full_image_2.jpg';?>);">
+<section id="abstpl-home" data-section="home" style="background-image: url(<?=$assetPath?>/images/home/full_image_2.jpg);">
     <div class="gradient"></div>
     <div class="container">
         <div class="text-wrap">
@@ -28,7 +28,7 @@ $mediaPath = $this->basePath('media');
 <section id="abstpl-intro">
     <div class="container">
         <div class="row row-bottom-padded-lg">
-            <div class="abstpl-block to-animate" style="background-image: url(images/img_7.jpg);">
+            <div class="abstpl-block to-animate" style="background-image: url(<?=$assetPath?>/images/home/img_7.jpg);">
                 <div class="overlay-darker"></div>
                 <div class="overlay"></div>
                 <div class="abstpl-text">
@@ -38,7 +38,7 @@ $mediaPath = $this->basePath('media');
                     <p><a href="#" class="btn btn-primary more-info">Más Información</a></p>
                 </div>
             </div>
-            <div class="abstpl-block to-animate" style="background-image: url(images/img_8.jpg);">
+            <div class="abstpl-block to-animate" style="background-image: url(<?=$assetPath?>/images/home/img_8.jpg);">
                 <div class="overlay-darker"></div>
                 <div class="overlay"></div>
                 <div class="abstpl-text">
@@ -49,7 +49,7 @@ $mediaPath = $this->basePath('media');
                     <p><a href="#" class="btn btn-primary more-info">Más Información</a></p>
                 </div>
             </div>
-            <div class="abstpl-block to-animate" style="background-image: url(images/img_10.jpg);">
+            <div class="abstpl-block to-animate" style="background-image: url(<?=$assetPath?>/images/home/img_10.jpg);">
                 <div class="overlay-darker"></div>
                 <div class="overlay"></div>
                 <div class="abstpl-text">
@@ -328,7 +328,7 @@ $mediaPath = $this->basePath('media');
     </div>
 </section>
 
-<section id="abstpl-counters" data-section="clients" style="background-image: url(<?=$assetPath . '/images/full_image_1.jpg';?>);">
+<section id="abstpl-counters" data-section="clients" style="background-image: url(<?=$assetPath?>/images/home/full_image_1.jpg);">
     <div class="abstpl-overlay"></div>
     <div class="container">
         <div class="row">
