--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -49,7 +49,7 @@ echo $this->doctype(); ?>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <!-- Mobile Toggle Menu Button -->
-                    <a class="js-abstpl-nav-toggle abstpl-nav-toggle" data-toggle="collapse" data-target="#navbar"
+                    <a id="js-abstpl-nav-toggle" class="js-abstpl-nav-toggle abstpl-nav-toggle" data-toggle="collapse" data-target="#navbar"
                        aria-expanded="false" aria-controls="navbar"><i></i></a>
                     <a class="navbar-brand" href="index.html">
                         <img src="<?=$assetPath . '/images/logo.png';?>" alt="company-logo" class="main-logo">
