(feat) Maquetando mensaje de cookies

--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6862,34 +6862,6 @@ h1, h2, h3, h4, h5, h6 {
     -ms-border-radius: 50%;
     border-radius: 50%; }
 
-#map {
-  width: 100%;
-  height: 500px;
-  position: relative; }
-  @media screen and (max-width: 768px) {
-    #map {
-      height: 200px; } }
-
-.mfp-with-zoom .mfp-container,
-.mfp-with-zoom.mfp-bg {
-  opacity: 0;
-  -webkit-backface-visibility: hidden;
-  /* ideally, transition speed should match zoom duration */
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out; }
-
-.mfp-with-zoom.mfp-ready .mfp-container {
-  opacity: 1; }
-
-.mfp-with-zoom.mfp-ready.mfp-bg {
-  opacity: 0.8; }
-
-.mfp-with-zoom.mfp-removing .mfp-container,
-.mfp-with-zoom.mfp-removing.mfp-bg {
-  opacity: 0; }
-
 .js .to-animate,
 .js .to-animate-2,
 .js .single-animate {
@@ -6923,3 +6895,12 @@ h1, h2, h3, h4, h5, h6 {
   animation-duration: .3s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both; }
+
+#cookie_alert {
+  position: fixed;
+  font-size: 13px;
+  bottom: 0;
+  background-color: #fff;
+  width: 100%;
+  padding: 10px;
+  z-index: 99; }
