--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -236,88 +236,7 @@ $mediaPath = $this->basePath('media');
             </div>
         </div>
         <div class="row row-bottom-padded-sm">
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_1.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_1.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 1</h2>
-                        <span>Branding</span>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_2.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_2.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 2</h2>
-                        <span>Web</span>
-                    </div>
-                </a>
-            </div>
-
-            <div class="clearfix visible-sm-block"></div>
-
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_3.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_3.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 3</h2>
-                        <span>Web</span>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_4.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_4.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 4</h2>
-                        <span>UI/UX</span>
-                    </div>
-                </a>
-            </div>
-
-            <div class="clearfix visible-sm-block"></div>
-
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_5.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_5.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 1</h2>
-                        <span>Photography</span>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_6.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_6.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 2</h2>
-                        <span>Illustration</span>
-                    </div>
-                </a>
-            </div>
-
-            <div class="clearfix visible-sm-block"></div>
-
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_7.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_7.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 3</h2>
-                        <span>Web</span>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xxs-12">
-                <a href="<?= $assetPath . '/images/work_8.jpg';?>" class="abstpl-project-item with-border image-popup to-animate">
-                    <img src="<?= $assetPath . '/images/work_8.jpg';?>" alt="Image" class="img-responsive">
-                    <div class="abstpl-text">
-                        <h2>Project 4</h2>
-                        <span>Sketch</span>
-                    </div>
-                </a>
-            </div>
-
+            <?= $jobHelper->renderFeatured($this->lang, $this->featuredAccessories, true);?>
         </div>
         <div class="row">
             <div class="col-xs-12 text-center">
